[metadata]
name = django-quickbooks
version = 0.6.4.2
description = A Django app to integrate with quickbooks.
url = https://github.com/weltlink/django-quickbooks
author = Bedilbek Khamidov
author_email = bedilbek@gmail.com
license = Mozilla Public License 2.0
keywords =
    django
    django-quickbooks
    intuit
    quickbooks
    quickbooks-django
    quickbooks-desktop
    quickbooks-online
    quickbooks-web-connector
    qwc
    qb
    qbwc
    web-connector
    integration
    soap-server
    spyne
    lxml

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries

[options]
include_package_data = true
packages = find:
install_requires =
  Django>=2.0
  lxml==4.4.2
  spyne==2.13.12b0

[options.extras_require]
rabbit = pika>=1.1.0
redis = redis>=3.4.1
celery = celery==4.3.0
tenant = django-tenants==2.2.3
